template/trinity-partch-march/trinity-large-preview:free-baseline/row_71_update_2_template_20260308_225740.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 Instance with HTTP Security Group and S3 Bucket

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t3.small
      - t3.medium
      - t2.micro
      - t2.small
      - t2.medium
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access
    Type: AWS::EC2::KeyPair::KeyName
    Default: default-key
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x
  BucketName:
    Description: Name of the S3 bucket to create
    Type: String
    Default: my-unique-bucket-name-123456

Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
      VpcId:
        Fn::ImportValue: !Sub '${AWS::AccountId}-vpc-id'

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId:
        Fn::ImportValue: !Sub '${AWS::AccountId}-ami-id'
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !Ref MySecurityGroup
          SubnetId:
            Fn::ImportValue: !Sub '${AWS::AccountId}-subnet-id'
      Tags:
        - Key: Name
          Value: MyEC2Instance

  MyS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref BucketName
      VersioningConfiguration:
        Status: Enabled
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

Outputs:
  InstanceId:
    Description: Instance ID
    Value: !Ref MyEC2Instance
  InstancePublicIp:
    Description: Public IP address of the instance
    Value: !GetAtt MyEC2Instance.PublicIp
  S3BucketName:
    Description: Name of the S3 bucket
    Value: !Ref MyS3Bucket
